# django-accu

./: .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg
.github/workflows/: publish-to-pypi.yml  test.yml
src/: accu.py
