[metadata]
name = accu
version = 0.0.2a
description = More batteries for Django - an opinionated package
long_description = file: README.md
long_description_content_type=text/markdown
license = MIT
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
include_package_data = True
package_dir=
   accu=src
install_requires =
    django

[options.packages.find]
exclude =
    docs*
    accu.tests*
    test*

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[mypy]
files=accu1,test
ignore_missing_imports=true

[tool:pytest]
testpaths=test/

[coverage:run]
source = src

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
